--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "sass": "sass",
-    "sass:watch": "sass --watch scss/main.scss  css/main.css",
-    "build":"purgecss --css css/main.css --content *.html -o css/reducido.css"
+    "sass:watch": "sass --watch scss/main.scss  css/main.css"
   },
   "author": "",
   "license": "ISC",
